syntax = "proto3";

package infraboard.mcenter.policy;
option go_package = "github.com/infraboard/mcenter/apps/policy";

import "mcube/pb/page/page.proto";
import "mcenter/apps/policy/pb/permission.proto";
import "mcenter/apps/policy/pb/policy.proto";
import "mcenter/apps/role/pb/permission.proto";
import "mcube/pb/resource/meta.proto";

// RPC 策略服务
service RPC {
    // 创建策略
	rpc CreatePolicy(CreatePolicyRequest) returns(Policy);
    // 查询策略列表
	rpc QueryPolicy(QueryPolicyRequest) returns(PolicySet);
    // 查询策略详情
	rpc DescribePolicy(DescribePolicyRequest) returns(Policy);
    // 删除策略
	rpc DeletePolicy(DeletePolicyRequest) returns(Policy);

    // 策略鉴权
    rpc CheckPermission(CheckPermissionRequest) returns(role.Permission);
}

// QueryPolicyRequest 获取子账号列表
message QueryPolicyRequest {
    // 分页参数
    // @gotags: bson:"page" json:"page"
    infraboard.mcube.page.PageRequest page = 1;
    // 策略所属域
    // @gotags: json:"domain"
    string domain = 2;
    // 用户空间
    // @gotags: json:"namespace"
    string namespace = 3;
    // 用户名称
    // @gotags: json:"user_id"
    string user_id = 4;
    // 用户角色
    // @gotags: json:"role_id"
    string role_id = 5; 
    // 是否查询角色相关信息
    // @gotags: json:"with_role"
    bool with_role = 6;
    // 是否查询空间相关信息
    // @gotags: json:"with_namespace"
    bool with_namespace = 7;   
}

// DescribePolicyRequest todo
message DescribePolicyRequest {
    // @gotags: json:"id"
	string id = 1;
}

// DeletePolicyRequest todo
message DeletePolicyRequest {
    // 资源范围
    // @gotags: json:"scope"
    mcube.resource.Scope scope = 1;
    // @gotags: json:"id"
	string id = 2;
}